<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#555454">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/et2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#000000"
            android:textSize="30sp"
            android:typeface="monospace" />
        <TextView
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:textColor="#F5F5F5"
            android:background="#78AD3C"
            android:textSize="30sp"
            android:typeface="monospace"
            android:layout_margin="20dp"/>
    </RelativeLayout>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="4"
        android:orientation="horizontal"
        android:padding="0dp"
        android:rowCount="6"
        android:textColor="#F5F5F5">

        <Button
            android:id="@+id/btn7"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_7"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_8"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_9"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnFact"
            android:layout_margin="2dp"
            android:background="#FF5722"
            android:text="@string/factorial"
            android:textColor="#424242"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_4"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_5"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_6"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnClean"
            android:layout_margin="2dp"
            android:background="#FF5722"
            android:text="@string/clean"
            android:textColor="#424242"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_1"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_2"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_3"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnRes"
            android:layout_rowSpan="2"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="#FF5722"
            android:text="@string/igual"
            android:textColor="#424242"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="#424242"
            android:text="@string/_0"
            android:textColor="#FAFAFA"
            android:textSize="25sp" />

    </GridLayout>




</LinearLayout>